--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -75,9 +75,8 @@
   padding: 16px;
   display: flex;
   justify-content: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 16px;
   color: #0e7f61;
   font-weight: bold;
-
 }
