--- a/src/components/Widget/Widget.module.scss
+++ b/src/components/Widget/Widget.module.scss
@@ -10,8 +10,11 @@
 
 
 .Promo {
+    align-items: center;
+    text-align: center;
     font-size: 18px;
-    margin-left: 30%;
+    border: 1px solid black;
+    //margin-left: 30%;
     border-radius: 5px;
     padding: 30px;
     width: 100%;
