--- a/src/container/MainPage.module.scss
+++ b/src/container/MainPage.module.scss
@@ -1,14 +1,15 @@
-.MainPage {}
+.MainPage {
+}
 
 .pagamento {
-    float: right;
+  float: right;
 }
 
 .pagamento > p {
-    text-align: center;
+  text-align: center;
 }
 
 .promocoes {
-    float: left;
-    width: 100%;
+  float: left;
+  width: 100%;
 }
