refactor Widget component

--- a/src/components/Widget.module.scss
+++ b/src/components/Widget.module.scss
@@ -1,37 +1,22 @@
 .Widget {
-  display: block;
-  max-width: 380px;
-  min-width: 250px;
-  margin: 10px;
-  height: fit-content;
   padding: 15px 10px;
   border-radius: 5px;
-  border: 1px solid black;
-  margin-top: 20px;
-  float: left;
-}
-
-#promo {
-  background-color: greenyellow !important;
+  background-color: transparent;
   text-align: center;
-}
 
-#price {
-  background-color: yellowgreen !important;
-  text-align: center;
-}
+  &:global(.left) {
+    text-align: left;
+  }
 
-#card {
-  background-color: gainsboro !important;
-  text-align: center;
-}
+  &:global(.right) {
+    text-align: right;
+  }
 
-#info {
-  background-color: blue !important;
-  text-align: center;
-  color: white;
-}
+  &:global(.green) {
+    background-color: var(--green);
+  }
 
-#info > a {
-  color: white;
+  &:global(.light-green) {
+    background-color: var(--light-green);
+  }
 }
