--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,7 @@
   --dark-gray: #505050;
   --gray: #696969;
   --light-gray: #f7f7f7;
+  --red: #ff3d61;
   --font: 'Verdana', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
