--- a/src/styles/components/widget.scss
+++ b/src/styles/components/widget.scss
@@ -3,18 +3,22 @@
 
 
 #widget {
+    width: 100%;
+
+    @include device('sm') {
+        width: fit-content;
+    }
 
     .wrapper {
         border-radius: calc(#{$radius-base} * 4);
-        padding: calc(#{$padding-base} * 3);
         text-align: center;
-        width: fit-content;
     }
 
     .card {
         @include flexAlign();
         background-color: $primary-color;
         color: $primary-dark-color;
+        padding: 0.75em;
         
         p {
             line-height: 1.5em;
@@ -26,6 +30,7 @@
     .info {
         @include flexAlign(center, column, space-between);
         background-color: $secondary-color;
+        padding: 0.75em;
 
         a img.image-help-me {
             width: 7em;
@@ -39,31 +44,36 @@
             color: $primary-light-color;
             font-size: 14px;
             font-weight: bold;
-            margin: calc(#{$margin-base} * 2);
+            margin: 0.5em;
         }
     }
 
     .special-offer {
-        @include flexAlign(center, row, center);
+        @include flexAlign(center, column, center);
         background-color: $secondary-color;
-        margin: calc(#{$margin-base} * 2);
-        width: fit-content;
+        margin: 0.5em;
+        padding: 0.5em 1em;
+        min-height: 100px;
 
         a img.image-cards {
             width: 7em;
+            margin-top: 0.25;
         }
 
         h3 {
             color: $primary-light-color; 
-            margin: $margin-base 0;
+            margin: 0.25 0;
         }
     
         @include device('sm') {
-            margin: 0 0;
+        @include flexAlign(center, row, center);
+        gap: 1em;
+        margin: 0 0;
+        width: fit-content;
 
-            h3 {
-                margin-bottom: 0;
-            }
+        h3 {
+            margin: 0;
+        }
         }
     }
 }
