--- a/src/styles/pages/notFound.scss
+++ b/src/styles/pages/notFound.scss
@@ -4,7 +4,7 @@
 #notFound {
   @include flexAlign();
   color: $secondary-color;
-  height: 50vh;
+  padding: 0.5em;
 
   a {
     color: $secondary-color;
