--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,11 +7,6 @@ $secondary-dark-color: #696969;
 
 $primary-light-color: #F7F7F7;
 
-
-// Spacing
-$margin-base: 0.25em;
-$padding-base: 0.25em;
-
 // Font size
 $font-size-base: 14px;
 
@@ -25,5 +20,4 @@ $breakpoints: (
   lg: (min-width: 1024px),
   xl: (min-width: 1280px),
   2xl: (min-width: 1536px),
-)
-
+);
