--- a/src/components/Widget.module.scss
+++ b/src/components/Widget.module.scss
@@ -4,34 +4,76 @@
     min-width: 250px;
     margin: 10px;
     height: fit-content;
-    padding: 15px 10px;
-    border-radius: 5px;
-    border: 1px solid black;
     margin-top: 20px;
     float: left;
 }
 
-#promo {
-    background-color: greenyellow !important;
-    text-align: center;
+.promo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #0e7f61;
+        padding: 10px 30px;
+        border-radius: 20px;
+
+    h2 {
+        color: #fff;
+        font-family: "Tahoma", Geneva, Verdana, sans-serif;
+        font-size: 18px;
+        text-shadow: 1px 1px #585858;
+    }
+    
+    img {
+        width: 90px;
+        margin-left: 12px;
+    }
 }
 
-#price {
-    background-color:yellowgreen !important;
-    text-align: center;
+.card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #BDD753;
+    padding: 20px 10px;
+    border-radius: 20px;
+
+    p {
+        font-family: "Tahoma", Geneva, Verdana, sans-serif;
+        font-size: 12px;
+        text-align: center;
+        font-weight: bold;
+        color: #505050;
+    }
 }
 
-#card {
-    background-color:gainsboro !important;
-    text-align: center;
-}
+.info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #0e7f61;
+    padding: 15px 10px;
+    border-radius: 20px;
 
-#info {
-    background-color: blue !important;
-    text-align: center;
-    color: white;
-}
+    h2 {
+        text-align: center;
+        color: #BDD753;            
+        font-size: 25px;
+        font-family: "Tahoma", Geneva, Verdana, sans-serif;
+        padding: 0 32px;
+        margin: 1px 1px;
+    }
 
-#info > a {
-    color: white;
-} 
+    p {
+        color: #FFF;
+        font-family: "Tahoma", Geneva, Verdana, sans-serif;
+        font-size: 12px;
+        font-weight: bold;
+        margin: 1px 1px;
+    }
+
+    img {
+        width: 80px;
+        margin-top: 5px;
+    }
+}
