--- a/src/container/MainPage.module.scss
+++ b/src/container/MainPage.module.scss
@@ -1,14 +1,60 @@
-.MainPage {}
+.MainPage {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #f7f7f7;
+  
+    .Container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 80%;
+      background: #fff;
+      box-shadow: 5px 5px 5px #b4b4b4;
+      margin: 32px 0px;
+      border-radius: 10px;
+    }
+  
+    .header {
+      display: flex;
+    }
+  
+    .content {
+      width: 100%;
+  
+      h5 {
+        color: #0e7f61;
+        font-family: "Tahoma", Geneva, Verdana, sans-serif;
+        padding: 5px 16px;
+        font-weight: bold;
+        font-size: 12px;
+      }
+    }
+  
+    .footer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: white;
+      flex-grow: 1;
+  
+      @media screen and (max-width: 768px) {
+        flex-direction: column;
+      }
+  
+      @media screen and (min-width: 768px) {
+        flex-direction: row;
+      }
+    }
+  }
 
-.pagamento {
-    float: right;
-}
-
-.pagamento > p {
-    text-align: center;
-}
-
-.promocoes {
-    float: left;
-    width: 100%;
-}
+  
+  .errorMsg {
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    font-family: "Tahoma", Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color: #0e7f61;
+  }
+  
